--- a/package.json
+++ b/package.json
@@ -25,7 +25,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "webpack-cli": "^3.1.2"
-  }
+  "devDependencies": {}
 }
